--- a/style.css
+++ b/style.css
@@ -2,23 +2,135 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
+    box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
 
 
 /* header style */
 
+body {
+    width: 1920px;
+}
 
 .header {
-    background: rgb(237, 225, 225);
+    background: #E554731A;
+
 }
 
 .banner {
-    padding: 10px 0 30px 140px;
+    padding: 0 240px;
     display: flex;
-    align-items: center;
+    justify-content: space-between;
+
 }
 
-.banner .image-1 {
-    width: 400px;
+.banner-content {
+    margin: 165px 0;
+}
+
+.first-image .image-1 {
+    width: 635px;
+    height: 800px;
+    padding-bottom: 0;
+}
+
+.banner-title {
+    color: #272727;
+    font-size: 80px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+
+#banner-description {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 30px;
+}
+
+.btn-style {
+    border-radius: 10px;
+    background: #E55473;
+    border: 0;
+    display: inline-flex;
+    padding: 20px 43px;
+    align-items: flex-start;
+    gap: 10px;
+    color: white;
+}
+
+/* main section style */
+
+.main-section {
+    background: #fff;
+    padding: 0 240px;
+}
+
+.main-div {
+    margin: 0 240px;
+    padding: 30px 160px;
+}
+
+.main-title {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-top: 100px;
+}
+
+.main-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin: 30px 0
+}
+
+.flower-div {
+    border-radius: ;
+    display: flex;
+    gap: 25px;
+}
+
+.flower-1 {
+    width: 464px;
+    height: 538px;
+    background: #A7216226;
+    border-radius: 300px 300px 0px 0px;
+    padding: 110px 78px;
+}
+
+.flower-1 .image-2 {
+    width: 310px;
+    height: 428px;
+}
+
+.flower-2 {
+    background: #0597A026;
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    padding: 117px 48px;
+}
+
+.flower-2 .image-3 {
+    width: 370px;
+    height: 370px;
+}
+
+.flower-3 {
+    background: #477D1126;
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    padding: 67px 75px;
+}
+
+.flower-3 .image-4 {
+    width: 314px;
+    height: 471px;
 }
