--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ body {
 /* Subscribe section style */
 
 .subscribe-box {
-    background-image: url(./flower-image/Rectangle\ 9.png);
+    background-image: url(https://ibb.co/ZJ66JDx);
     margin: 100px 240px;
     height: 449px;
 }
